--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -73,6 +73,34 @@ section {
   background-color: var(--color-primary);
 }
 
+.school{
+    display: flex;
+    gap: 50px;
+    align-items: center;
+    padding: 50px 0px 0px 0px ;
+}
+
+.hobbies{
+    display: flex;
+    gap:50px;
+    align-items: center;
+    padding: 50px 0px 0px 0px ;
+}
+
+.image-school{
+    flex: 1;
+    position: relative;
+}
+
+.sch-img{
+    width: 100%;
+    height: 500px;
+    object-fit: contain;
+}
+
+.school-contents{
+    flex: 1;
+}
 .active {
   display: block;
   animation: appear 1s ease-in-out;
@@ -102,8 +130,8 @@ section {
   padding: 1rem;
   cursor: pointer;
   background-color: var(--color-grey-4);
-  width: 55px;
-  height: 55px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
