Adding image to hobbies

--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -378,8 +378,8 @@
             <h2>My <span>Education</span><span class="bg-text">Qualifications</span></h2>
         </div>
         <div class="school">
-            <div class="image-school" >
-                <img class="sch-img" alt="school image" src="{% static 'images/ashschool.jpg' %}"/>
+            <div class="image-school">
+                <img alt="school image" class="sch-img" src="{% static 'images/ashschool.jpg' %}"/>
             </div>
             <div class="school-contents">
                 <h1 class="course-title">Bachelor's in Computer science</h1>
@@ -392,14 +392,18 @@
         <div class="main-title">
             <h2>My <span>Hobbies</span><span class="bg-text">Activities</span></h2>
         </div>
+        <div class="image-hobbie">
+            <img alt="finish line" class="hobbi-img" src="{% static 'images/ashtri.jpg' %}"/>
+        </div>
         <div class="hobbies">
-            <div class="image-school" >
-                <img class="sch-img" alt="school image" src="{% static 'images/hobbiesash.JPG' %}"/>
+            <div class="image-school">
+                <img alt="school image" class="sch-img" src="{% static 'images/hobbiesash.JPG' %}"/>
             </div>
-            <div class="school-contents">
-                <h1 class="course-title">Bachelor's in Computer science</h1>
-                <p class="school-name">Laikipia University - Laikipia</p>
-                <p class="school-name" style="color: #bbb">September 2017 to August 2021</p>
+            <div class="hobbi-contents">
+                <h1 class="hobbi-title">List of activities I enjoy</h1>
+                <h4 class="school-name"><span style="font-weight: bold; font-size: 18px"> > </span> Cycling </h4>
+                <h4 class="school-name"><span style="font-weight: bold; font-size: 18px"> > </span> Swimming </h4>
+                <h4 class="school-name"><span style="font-weight: bold; font-size: 18px"> > </span> Athletics </h4>
             </div>
         </div>
     </section>
