--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -82,10 +82,17 @@ section {
 
 .hobbies{
     display: flex;
+    flex-direction: row-reverse; /* Display links on larger screens */
     justify-content: space-around;
-    flex-direction: row-reverse;
     padding: 50px 0px 0px 0px ;
     max-height: 500px;
+}
+
+@media (max-width: 768px) {
+  .hobbies {
+    display: block;
+    flex-direction: column; /* Display links on larger screens */
+  }
 }
 
 .image-school{
@@ -96,7 +103,7 @@ section {
 
 
 .hobbi-img{
-    min-width: 100% !important;
+    width: 100%;
     height: 250px;
     object-fit: contain;
 }
