--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -84,28 +84,31 @@ section {
     display: flex;
     flex-direction: row-reverse; /* Display links on larger screens */
     justify-content: space-around;
-    padding: 50px 0px 0px 0px ;
-    max-height: 500px;
 }
 
 @media (max-width: 768px) {
-  .hobbies {
-    display: block;
-    flex-direction: column; /* Display links on larger screens */
+  .main-title {
+    font-size: 24px; /* Display links on larger screens */
+  }
+  .hobbi-title{
+    font-size: 24px;
   }
 }
 
-.image-school{
-    flex: 1;
-    position: relative;
+.image-container {
+  display: flex;
+  align-items: center; /* Center items vertically */
+  justify-content: center;
 }
 
 
 
-.hobbi-img{
-    width: 100%;
-    height: 250px;
-    object-fit: contain;
+.hobbi-img,
+.sch-img {
+  max-width: 100%; /* Ensure images don't exceed container width */
+  max-height: 350px;
+  display: block; /* Remove any default image spacing */
+  margin: 0 auto; /* Center images horizontally */
 }
 
 .hobbi-title{
@@ -751,6 +754,10 @@ section {
 @media screen and (max-width: 600px) {
   header {
     padding: 0 !important;
+  }
+
+  #btn-tex{
+    font-size: 16px;
   }
 
   .theme-btn {
